fix scrollbar

--- a/client/public/reset.css
+++ b/client/public/reset.css
@@ -31,6 +31,7 @@ body {
 
 ::-webkit-scrollbar-track {
     background-color:rgb(21, 32, 43);
+    color:rgb(21, 32, 43);
 }
 
 /* make sure to set some focus styles for accessibility */
